2007-05-28  Wim Taymans  <wim@fluendo.com>

	* gst/rtsp/rtsptransport.c:
	Use renamed RTP bin.

2007-05-28  Wim Taymans  <wim@fluendo.com>

	Based on patch by: Dejan Sakelšak <sakdean at gmail dot com>

	* gst/videobox/gstvideobox.c: (gst_video_box_class_init),
	(gst_video_box_set_property), (gst_video_box_transform_caps),
	(video_box_recalc_transform), (gst_video_box_set_caps),
	(gst_video_box_get_unit_size), (gst_video_box_apply_alpha),
	(gst_video_box_ayuv_ayuv), (gst_video_box_clear), (UVfloor),
	(UVceil), (gst_video_box_ayuv_i420), (gst_video_box_i420_ayuv),
	(gst_video_box_i420_i420), (gst_video_box_transform),
	(plugin_init):
	Add AYUV->AYUV and AYUV->I420 formats. 
	Fix negotiation and I420->AYUV conversion.
	Fixes #429329.

2007-05-26  Wim Taymans  <wim@fluendo.com>

	* ext/speex/gstspeexdec.c: (speex_dec_chain_parse_data):
	Use different variables for nested for loops so that the outer loop
	functions properly and speex files with multiple frames per buffer work
	properly.
	Fixes #441408.

2007-05-25  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/id3demux/gstid3demux.c: (gst_id3demux_sink_event):
	  Don't leak newsegment events.

2007-05-25  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/wavparse/Makefile.am:
	  Add '-lm' to LIBS for ceil(), don't assume one of our dependencies
	  drags it in.

2007-05-25  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/flac/gstflacenc.c: (gst_flac_enc_init),
	(notgst_value_array_append_buffer),
	(gst_flac_enc_process_stream_headers),
	(gst_flac_enc_write_callback), (gst_flac_enc_chain),
	(gst_flac_enc_change_state):
	* ext/flac/gstflacenc.h:
	  Collect headers, add "streamheader" field to output caps and set
	  BUFFER_IN_CAPS flag on pushed header buffers. That way oggmux
	  produces output according to the official FLAC-to-Ogg mapping
	  instead of completely broken files. Fixes #426044.

2007-05-25  Jan Schmidt  <thaytan@mad.scientist.com>
