@@ -1,3 +1,12 @@
+2007-05-30  Tim-Philipp Müller  <tim at centricular dot net>
+
+	* gst/avi/gstavidemux.c: (gst_avi_demux_push_event),
+	(gst_avi_demux_loop):
+	  Make _push_event() return TRUE if the event could be pushed on at
+	  least one pad and not only if it could be pushed on all pads,
+	  otherwise we'll end up posting an error message on EOS if one or
+	  more source pads are not connected.
+
 2007-05-28  Wim Taymans  <wim@fluendo.com>
 
 	* gst/rtsp/rtsptransport.c:
